# my-first-learning-to-rank

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: dataset.csv  dataset_with_cats.csv
notebooks/: my_first_learning_to_rank.ipynb
src/my_first_ltr/: data_visualisation.py  normalisation.py  train_utils.py  utils.py
