[tool.poetry]
name = "my-ltr"
version = "0.1.0"
description = ""
authors = ["Sarah Le Moigne <sarah.lemoigne@algolia.com>", "Sarah Le Moigne <sarah.lemoigne@algolia.com>"]
readme = "README.md"
packages = [
    { include = "my_first_ltr", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = { version = "^2.2.2", extras = ["pyarrow"] }
catboost = "^1.2.7"
scikit-learn = "^1.5.2"


[tool.poetry.group.ide.dependencies]
jupyterlab = "^4.2.2"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"